test/types/string/assignToChar/testAssign.10.good
Helpers.chpl:15: In function 'testAssignVal':
Helpers.chpl:17: error: Cannot assign to uint(8) from bytes
  testAssign.chpl:24: called as testAssignVal(strBytes: bytes, type toType = uint(8))
